syntax = "proto3";

// package model defines model datatypes
package models;
option go_package = "github.com/ubclaunchpad/pinpoint/protobuf/models";

message User {
  string email = 1;
  string name = 2;
  string hash = 3;
  bool verified = 4;
}

message Club {
  string clubID = 1;
  string name = 2;
  string description = 3;
}

message ClubUser {
  string clubID = 1;
  string email = 2;
  string name = 3;
  string role = 4;
}

message EmailVerification {
  string hash = 1;
  string email = 2;
  int64 expiry = 3;
}

message EventProps {
  string period = 1;
  string eventID = 2;
  string name = 3;
  string club = 4;
  string description = 5;
  repeated FieldProps fields = 6;
}

message FieldProps {
  string name = 1;
  bool required = 2;
  string blurb = 3;
  string description = 4;
  oneof properties {
    LongTextProps long_text = 5;
    ShortTextProps short_text = 6;
  };
}

message LongTextProps { }

message ShortTextProps { }

message Applicant {
  string period = 1;
  string email = 2;
  string name = 3;
  repeated string tags = 4;
}

message Application {
  string period = 1;
  string eventID = 2;
  string email = 3;
  string name = 4;
  map<string, FieldEntry> entries = 5;
}

message FieldEntry {
  bytes value = 1;
}

message Tag {
  string period = 1;
  string tagName = 2;
}
